# linux-process-manager

./: CMakeLists.txt  main.cpp
include/: Admin.h  Program.h  Terminal.h  UI.h  User.h  UtilMethods.h  Utils.h  stdafx.h
src/: Admin.cpp  Program.cpp  Terminal.cpp  UI.cpp  User.cpp  UtilMethods.cpp  Utils.cpp
